<resources>
    <string name="app_name">Underground</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sean Miller</string>
    <string name="nav_header_subtitle">202.sean.202@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_favorites">Favorite Places</string>
    <string name="title_activity_maps">Map</string>

    <string name="where_would_you_like_to_go">Where would you like to go?</string>
    <string name="restaurant">Restaurants</string>
    <string name="cafe">Cafes</string>
    <string name="attractions">Attractions</string>
    <string name="bar">Bars &amp; Nightlife</string>
    <string name="parks">Parks &amp; Outdoors</string>


</resources>
