<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--<include-->
            <!--layout="@layout/app_bar_main"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_width="match_parent"/>-->

    <TextView
            android:layout_width="match_parent"
            android:id="@+id/greeting"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/where_would_you_like_to_go"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_height="wrap_content">
    </TextView>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:layout_height="match_parent">

        <View
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_height="5dp">
        </View>

        <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/restaurant"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/restaurant_title"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_width="40dp"
                    android:id="@+id/restaurant_icon"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/restaurant"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_height="5dp">
        </View>

        <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/cafe"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/cafe_title"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_width="40dp"
                    android:id="@+id/cafe_icon"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/cafe"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_height="5dp">
        </View>

        <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/attractions"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/attractions_title"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_width="40dp"
                    android:id="@+id/attractions_icon"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/attractions"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_height="5dp">
        </View>

        <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/bar"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/bar_title"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_width="40dp"
                    android:id="@+id/bar_icon"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/bar"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_height="5dp">
        </View>

        <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/parks"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/parks_title"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_width="40dp"
                    android:id="@+id/parks_icon"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/parks"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_height="5dp">
        </View>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="30dp"
                android:src="@mipmap/ic_launcher_round"/>

    </LinearLayout>

</LinearLayout>

    <!--<android.support.design.widget.NavigationView-->
            <!--android:id="@+id/nav_view"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="start"-->
            <!--android:fitsSystemWindows="true"-->
            <!--app:headerLayout="@layout/nav_header_main"-->
            <!--app:menu="@menu/activity_main_drawer"/>-->

<!--</android.support.v4.widget.DrawerLayout>-->
